@@ -120,8 +120,7 @@ MusicBrainzFinder::sendNewRequest()
     QPair<Meta::TrackPtr, QNetworkRequest> req = m_requests.takeFirst();
     QNetworkReply *reply = net->get( req.second );
     m_replies.insert( reply, req.first );
-    connect( reply, QOverload<QNetworkReply::NetworkError>::of(&QNetworkReply::errorOccurred),
-             this, &MusicBrainzFinder::gotReplyError );
+    connect( reply, &QNetworkReply::errorOccurred, this, &MusicBrainzFinder::gotReplyError );
 
     debug() << "Request sent:" << req.second.url().toString();
 }
@@ -148,8 +147,7 @@ MusicBrainzFinder::gotReplyError( QNetworkReply::NetworkError code )
         return;
 
     debug() << "Error occurred during network request:" << reply->errorString();
-    disconnect( reply, QOverload<QNetworkReply::NetworkError>::of(&QNetworkReply::errorOccurred),
-                this, &MusicBrainzFinder::gotReplyError );
+    disconnect( reply, &QNetworkReply::errorOccurred, this, &MusicBrainzFinder::gotReplyError );
 
     // Send an empty result to populate the tagger.
     sendTrack( m_replies.value( reply ), QVariantMap() );
@@ -620,7 +618,7 @@ MusicBrainzFinder::compileReleaseGroupRequest( const QString &releaseGroupID )
 QNetworkRequest
 MusicBrainzFinder::compileRequest( QUrl &url )
 {
-    url.setScheme( QStringLiteral("http") );
+    url.setScheme( QStringLiteral("https") );
     url.setHost( mb_host );
     url.setPort( mb_port );
 
