@@ -15,6 +15,7 @@ VERSION 3.3.1 UNRELEASED
    * Fix example permission grant command in database settings (BR 386004)
    * Fix equalizer gains not updating when selecting some presets (BR 463908)
    * Fix continuing playback after timecoded tracks (cue files etc, BR 270003)
+   * Fix MusicBrainz search
 
 VERSION 3.3.0
   FEATURES:
